tests/fsharp/typecheck/sigs/neg124.bsl

neg124.fs(39,27,39,35): typecheck error FS0071: Type constraint mismatch when applying the default type 'obj' for a type inference variable. No overloads match for method 'unsigned_witness'. The available overloads are shown below. Consider adding further type constraints
neg124.fs(39,27,39,35): typecheck error FS0071: Possible overload: 'static member NegativeTestCase1.witnesses.unsigned_witness : x:uint64 -> uint64'. Type constraint mismatch. The type 
    'obj'    
is not compatible with type
    'uint64'    
.
neg124.fs(39,27,39,35): typecheck error FS0071: Possible overload: 'static member NegativeTestCase1.witnesses.unsigned_witness : x:int64 -> uint64'. Type constraint mismatch. The type 
    'obj'    
is not compatible with type
    'int64'    
.
neg124.fs(39,27,39,35): typecheck error FS0071: Possible overload: 'static member NegativeTestCase1.witnesses.unsigned_witness : x:uint32 -> uint32'. Type constraint mismatch. The type 
    'obj'    
is not compatible with type
    'uint32'    
.
neg124.fs(39,27,39,35): typecheck error FS0071: Possible overload: 'static member NegativeTestCase1.witnesses.unsigned_witness : x:int32 -> uint32'. Type constraint mismatch. The type 
    'obj'    
is not compatible with type
    'int32'    
.
neg124.fs(39,27,39,35): typecheck error FS0071: Possible overload: 'static member NegativeTestCase1.witnesses.unsigned_witness : x:uint16 -> uint16'. Type constraint mismatch. The type 
    'obj'    
is not compatible with type
    'uint16'    
.
neg124.fs(39,27,39,35): typecheck error FS0071: Possible overload: 'static member NegativeTestCase1.witnesses.unsigned_witness : x:int16 -> uint16'. Type constraint mismatch. The type 
    'obj'    
is not compatible with type
    'int16'    
.
neg124.fs(39,27,39,35): typecheck error FS0071: Possible overload: 'static member NegativeTestCase1.witnesses.unsigned_witness : x:byte -> byte'. Type constraint mismatch. The type 
    'obj'    
is not compatible with type
    'byte'    
.
neg124.fs(39,27,39,35): typecheck error FS0071: Possible overload: 'static member NegativeTestCase1.witnesses.unsigned_witness : x:sbyte -> uint8'. Type constraint mismatch. The type 
    'obj'    
is not compatible with type
    'sbyte'    
.
